# async-curl

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: async.rs  builder.rs  builder_curl_multi.rs
src/: actor.rs  async_curl.rs  async_curl_error.rs  curl.rs  error.rs  lib.rs  response_handler.rs  tests.rs
src/tests/: curl_abort.rs  mod.rs  tests.rs
