[package]
name = "async-curl"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
version = "0.4.7"
edition = "2021"
description = "An asynchronous implementation to perform curl operations with tokio."
license = "MIT"
repository = "https://github.com/LorenzoLeonardo/async-curl"
homepage = "https://github.com/LorenzoLeonardo/async-curl"
documentation = "https://docs.rs/async-curl"
categories = ["web-programming::http-client"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
curl = "0.4"
log = "0.4"
tokio = { version = "1.48", features = ["rt", "test-util", "macros"] }

[dev-dependencies]
ctor = "0.4"
env_logger = "0.11"
http = "1.2"
wiremock = "0.6"
